25/04/2025
>odebrane nadbytecne komentare
>upraveny ascii art (MB1, blessed)
>upravena krcma
>zmenen text v kostele
>pridan changelog (moje-hra/changelog)
>output smazan a hra.exe je ted primo ve hlavni slozce (moje-hra/hra.exe)
>pridan backstory (tri nahodne vylepseni statu)
>kostlivec je nahrazen upirem ktery ziska zivoty pri kazdem zabiti
>opraven ctime, nahodne hodnoty

26/04/2025
>upir nemuze nadale do kostela
>byl pridan jetset sound effect ktery pozdeji vyuziju (moje-hra/resources/jetset.wav)

27/04/2025
>changelog upraven pro citelnost
>do resources byla pridana slozka extras ktera obsahuje ruzne verze ikony (moje-hra/resources/extras)
>pridan zastupce ktery ma ikonu, hra byla pojmenovana CrownOfHornsRPG [subject to change]
>buff ruznych nepratel