@@ -18,3 +18,6 @@
 >do resources byla pridana slozka extras ktera obsahuje ruzne verze ikony (moje-hra/resources/extras)
 >pridan zastupce ktery ma ikonu, hra byla pojmenovana CrownOfHornsRPG [subject to change]
 >buff ruznych nepratel
+
+28/04/2025
+>pridan VINES a UNDERDARK [subject to change]
